--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^15.0.3",
     "expo": "~54.0.30",
     "expo-app-loading": "^2.1.1",
+    "expo-blur": "~15.0.8",
     "expo-font": "~14.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-location": "~19.0.8",
